# farm-friend

./: .env.example  .eslintrc.cjs  .firebaserc  .gitignore  CLAUDE.md  OPS.md  README.md  firebase.json  firestore.indexes.json  firestore.rules  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
docs/: ARCHITECTURE.md  (+20 more)
functions/: main.py  pyproject.toml  requirements.txt
functions/app/: config.py  firebase_app.py
functions/app/admin/: callables.py
functions/scripts/: benchmark_olmo_runpod.py  fire_inbound_sms.py  modal_olmo_vllm_snapshot.py  seed_smoke_test.py  seed_test_data.py  set_admin.py
functions/tests/: conftest.py  test_activity_guards.py  test_agent_context_draft.py  test_agent_context_open_opps.py  test_agent_decisions_repo.py  test_benchmark_olmo_runpod.py  test_board_review_admin_only.py  test_cancel_drop_dispatch.py  test_clarify_axis.py  test_clear_test_data.py  test_copy.py  test_day_voting_coordinator.py  test_day_voting_create.py  test_day_voting_intake.py  test_day_voting_lockin.py  test_day_voting_model.py  test_dispatch_reliability.py  test_edit_headcount_block.py  test_escalation_safety.py  test_farmer_ops.py  test_farmer_posting_summary.py  test_hotkeys.py  test_intake_draft_merge.py  test_llm_client.py  test_media_policy.py  test_messaging_media.py  test_models_window_fields.py  test_parser_missing_fields.py  test_phantom_parent_guard.py  test_proposals.py  test_proposals_tick.py  test_time.py  test_timeout_offer_fallback.py  test_token_derivation.py  test_window_outreach.py
(+73 files in other folders)
